* made the modal window for the action editor a little bigger * fixed visual problems when the html element picker gets too small in width

--- a/main/src/main/webapp/app/stylesheets/_bootstrap.scss
+++ b/main/src/main/webapp/app/stylesheets/_bootstrap.scss
@@ -1,8 +1,7 @@
-// overwrite default variables
-$font-size-base: 12px !default;
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 
 // Core variables and mixins
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "bootstrap-variables";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
