--- a/main/src/main/webapp/app/stylesheets/_html-element-picker.scss
+++ b/main/src/main/webapp/app/stylesheets/_html-element-picker.scss
@@ -1,72 +1,48 @@
-#web-element-picker-wrapper {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+@import "mixins";
+
+$color-header: #f2f2f2;
+
+#html-element-picker-wrapper {
+  @include position(fixed, 0, 0, 0, 0);
   z-index: 1200;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, .5);
 }
 
-#web-element-picker {
-  position: absolute;
-  top: 25px;
-  bottom: 25px;
-  left: 25px;
-  right: 25px;
-  border: 3px solid #555;
-  box-shadow: 0px 2px 10px #000;
+#html-element-picker {
+  @include position(absolute, 10px, 10px, 10px, 10px);
+  box-shadow: 0 2px 10px #000;
   z-index: 1210;
+  display: flex;
+  flex-direction: column;
+  min-width: 620px;
 
-  .navbar {
-    border-radius: 0;
+  .header {
+    background: $color-header;
+    height: 54px;
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
+    border-bottom: 1px solid darken($color-header, 10);
+    box-sizing: border-box;
+    padding: 0 6px;
 
-    .url-bar, .selection-bar, .button-bar {
-      flex: 1 100%;
-    }
-
-    .url-bar {
-      flex: 0 0 auto;
-      order: 1;
-    }
-    .selection-bar {
-      flex: 1 0 0px;
-      order: 2;
-      padding-right: 15px;
-
-      .btn-group {
-        display: flex;
-        flex-flow: row wrap;
-
-        .selection-bar-toggle-btn {
-          flex: 0 0 auto;
-          order: 1
-        }
-        .selection-bar-selector {
-          flex: 1 0 0px;
-          order: 2;
-          text-align: left;
-        }
-      }
-
-    }
-    .button-bar {
-      flex: 0 0 auto;
-      order: 3;
-      padding-right: 15px
+    .header-element {
+      box-sizing: border-box;
+      padding: 12px 6px;
     }
   }
 
-  .iframe-wrapper {
-    position: absolute;
-    overflow: hidden;
+  .body {
     background: #fff;
-    top: 52px;
-    bottom: 0;
-    width: 100%;
-    iframe {
-      border: none;
+    position: relative;
+    height: 100%;
+
+    .iframe-wrapper {
+      @include position(absolute, 0, 0, 0, 0);
+      overflow: hidden;
+
+      iframe {
+        border: none;
+      }
     }
   }
 }
